fixed bug wrong font on paradiser nav

--- a/_sass/index/_paradeiser-own.scss
+++ b/_sass/index/_paradeiser-own.scss
@@ -15,7 +15,7 @@
 }
 
 .paradeiser a {
-  font-family: 'Lato';
+  font-family: $primary-nav-font;
 }
 
 .paradeiser a.active,
